updated more on project

--- a/Pope_Steven_OOP_Review/index.html
+++ b/Pope_Steven_OOP_Review/index.html
@@ -32,8 +32,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="toonPowers">Powers</label>
-                    <input type="text" id="toonPowers" class="form-control">
+                    <label for="toonPowers">Attack Powers <br><em>(Numbers separated by ,)</em></label>
+                    <input type="text" id="attackPowers" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="toonRole">Role</label>
@@ -70,6 +70,7 @@
     <script src="js/toon.js"></script>
     <script src="js/toonLineup.js"></script>
     <script src="js/superToon.js"></script>
+    <script src="js/person.js"></script>
     <script src="js/main.js"></script>
 </body>
 
