--- a/Pope_Steven_OOP_Review/index.html
+++ b/Pope_Steven_OOP_Review/index.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="container">
 
+        <header>
+            <h1>Toon Creator!</h1>
+        </header>
 
         <section id="formField">
             <form id="toonForm">
@@ -44,9 +47,13 @@
                     </select>
                 </div>
                 <div class="form-group">
-                        <label for="toonPowers">Movie Location</label>
-                        <input type="text" id="movieLocation" class="form-control" value="Netflix" required >
-                    </div>
+                    <label for="stoneName">Stone Name <em>(Infinity Stone)</em></label>
+                    <input type="text" id="stoneName" class="form-control" required=true>
+                </div>
+                <div class="form-group">
+                    <label for="toonPowers">Movie Host Location</label>
+                    <input type="text" id="movieLocation" class="form-control" value="Netflix" required>
+                </div>
                 <div class="form-group">
                     <button id="addToon" type="button" class="btn btn-dark">Add Toon</button>
                     <button id="showToons" type="button" class="btn btn-dark">Show Toons</button>
@@ -55,7 +62,7 @@
             </form>
         </section>
         <section id="displayHeroes">
-
+            
         </section>
 
     </div>
@@ -67,11 +74,28 @@
     <script src="bootstrap/popper.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
     <script src="js/utility.js"></script>
+    <script src="js/person.js"></script>
+    <script src="js/stone.js"></script>
     <script src="js/toon.js"></script>
     <script src="js/toonLineup.js"></script>
     <script src="js/superToon.js"></script>
-    <script src="js/person.js"></script>
     <script src="js/main.js"></script>
 </body>
+
+<script>
+    // let test = Utils.desconstructStringToNumArr("1,2,3");
+    // console.log(test);
+
+    // SuperToon.staticTest = 'aaaa';
+    // let st = new SuperToon('a','b');
+    // console.log(st.staticTest);
+
+    // let t = new Toon('1',[99],'c','d','f');
+    // let st = new SuperToon('a', 'b');
+
+    // console.log(st.getPowers());
+
+
+</script>
 
 </html>
