added comments in HTML file

--- a/Pope_Steven_OOP_Review/index.html
+++ b/Pope_Steven_OOP_Review/index.html
@@ -1,3 +1,6 @@
+<!-- Steven Pope -->
+<!-- Static Variable is in both my toon class and my supertoon class line 41 in toon and 36 in supertoon -->
+
 <!DOCTYPE html>
 <html>
 
